# lab04

./: CMakeLists.txt
.github/workflows/: tms.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
